<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="ru.mirea.proginz.ikbo0121.shkolnik.sedov.bykov.ui.fragments.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard">

        <action
            android:id="@+id/action_dashboardFragment_to_statisticsFragment"
            app:destination="@id/statisticsFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />

    </fragment>

    <fragment
        android:id="@+id/comparisonFragment"
        android:name="ru.mirea.proginz.ikbo0121.shkolnik.sedov.bykov.ui.fragments.ComparisonFragment"
        android:label="@string/comparison"
        tools:layout="@layout/fragment_comparison" />

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="ru.mirea.proginz.ikbo0121.shkolnik.sedov.bykov.ui.fragments.StatisticsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statistics">

        <argument
            android:name="query"
            android:defaultValue="null"
            app:argType="string"
            app:nullable="true" />

        <argument
            android:name="region"
            android:defaultValue="null"
            app:argType="string"
            app:nullable="true" />

    </fragment>

</navigation>